# dirwatch-app

./: .gitignore  README.md  TAGS  dirwatch-app.cabal  stack.yaml
src/: Main.hs  Main.m
