name:                dirwatch-app
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/konn/dirwatch-app#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-dir:            data

executable dirwatch
  hs-source-dirs:      src
  c-sources:           src/Main.m
  ghc-options:         -Wall
  main-is:             Main.hs
  default-language:    Haskell2010
  frameworks:          AppKit
  cc-options:          -Wall -fobjc-arc 
  ghc-options:         -Wall -fllvm -optl-ObjC -threaded -O2
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , cocoa-notify
                     , directory >= 1.2.2.0
                     , file-embed
                     , filepath >= 1.4.0.0
                     , fsnotify
                     , inline-c-objc
                     , text >= 1.2.2.1
                     , time
